fixed overlapping images, more responsive

--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,12 @@ Html, body{
   height: 100%;
   margin: 0;
   width: 100%;
-  /* text-align: center; */
 }
 
+.container {
+  width:100%;
+  margin: 0 auto;
+}
 /* div for menu options */
 .menu {
   font-family: "Lora";
@@ -88,7 +91,7 @@ button:hover {
 .summary, .discovery, .conclusion {
   width: 48%;
   margin: 0 auto;
-  padding: 0;
+  padding-bottom: 5rem;
 }
 
 /* Introduction: name, title, slogan, button */
@@ -102,6 +105,7 @@ button:hover {
 .caption {
   font-size: 2rem;
   line-height: 120%;
+
 }
 
 h1{
@@ -165,7 +169,6 @@ h1 span {
   z-index:-1;
 }
 
-
 .designzen{
   padding-bottom: 5rem;
   padding-left: 20rem;
@@ -218,30 +221,33 @@ h1 span {
 
 footer {
   background-color: rgba(222, 210, 194);
-  font-family: "Lora";
-  font-size: 1.8rem;
   padding: 2rem;
   text-align: center;
-  /* height: 5rem; */
-}
 
+}
 
 footer > a {
   text-decoration: none;
+  font-size: 50px;
 }
 
 .links {
   background-color: rgba(222, 210, 194);
   font-family: "Lora";
   font-weight: lighter;
-  font-size: 1.8rem;
+  font-size: 2rem;
+  margin: 0 auto;
 }
 
 .title {
   font-family: "Playfair display";
   font-size: 3.6rem;
-  line-height: 50%;
-  padding-top: 10rem;
+  padding-top: 8rem;
+}
+
+#firsttitle {
+  font-family: "Playfair display";
+  font-size: 3.6rem;
 }
 
 .casestudy {
@@ -258,23 +264,21 @@ footer > a {
 }
 
 .logistics{
-column-count: 3;
+  display: flex;
+  justify-content: center;
 
 }
 
 #myrole {
-  background-color: green;
-  display:block;
+  text-align: center;
 }
 
 #deliverables {
-  background-color: purple;
-  break-inside: avoid-column;
+    text-align: center;
 }
 
 #tools {
-  background-color:yellow;
-
+    text-align: center;
 }
 
 h2 {
@@ -445,6 +449,7 @@ ol {
 .prototype {
   margin-left: auto;
   margin-right: auto;
+  display: inherit;
 }
 
 #before{
@@ -464,6 +469,7 @@ ol {
     margin: 0 auto;
     width: 100%;
     text-align:center;
+    overflow-x: hidden;
   }
 
   h1 {
@@ -476,9 +482,7 @@ ol {
     height:7.5px;
     left: 45px;
     width:21rem;
-
   }
-
 
   .slogan {
     display: inline-block;
@@ -541,91 +545,112 @@ ol {
   #toggle:checked + .menu {
     display:block;
   }
+
   a:hover {
    color:#000;
  }
+
+ .summary, .discovery, .conclusion {
+   width: 75%;
+ }
+
  .summary img {
    width: 33.75rem;
    height: 30rem;
    border: 1px solid #B0B0B0;
-
  }
+
+.title {
+  line-height: 100%;
+}
 
  .usersurvey{
-   width: 45rem;
-   height: 16.5rem;
-
- }
+   width: 100%;
+   height: 100%;
+}
 
  .persona1, .persona2 {
    width: 26.25rem;
    height: 18.75rem;
-
  }
 
  .pinterestlogo, .dropboxlogo {
    width: 11.25rem;
    height: 11.25rem;
-
  }
 
  .userstoriesscreenshot {
-   width: 45rem;
-   height: 37.5rem;
-
- }
+   height: 100%;
+   width: 100%;
+}
 
  .userflow {
    width: 37.5rem;
    height: 43rem;
-
- }
+}
 
  .sketch{
    width: 30rem;
    height: 21rem;
-
- }
+}
 
  .lowfimockup {
    width: 30rem;
    height: 21rem;
-
  }
 
  .colors{
    width: 37.5rem;
    height: 22.5rem;
-
- }
+}
 
  .logosketch {
    width: 37.5rem;
    height: 15rem;
-
  }
 
  .dzlogo {
    width: 22.5rem;
    height: 22.5rem;
-
  }
 
  .test1, .test2, .test3 {
    width: 37.5rem;
    height: 30rem;
-
  }
 
  .s1v1, .s1v2, .s2v1, .s2v2, .s3v1, .s3v2{
    width: 37.5rem;
    height: 30rem;
+}
 
- }
-
- .v1, .v2 {
+ .v1{
    width: 22.5rem;
    height: 18rem;
-   position:;
+}
+
+ .v2 {
+   width: 22.5rem;
+   height: 18rem;
+}
+
+ h2 {
+   font-size: 3.6rem;
+ }
+
+ h3 {
+   font-size: 5.25rem;
+ }
+
+ h5, h6, li, ol, .persona{
+   font-size: 1.5rem;
+ }
+
+ p {
+   font-size: 1.8rem;
+ }
+
+ .logistics{
+   display: block;
  }
 }
